# simple-dips

./: .env-sample  .gitignore  README.md  compose.yml  main.py  pyproject.toml
agents/: agent_base.py  agent_runner.py  ai_agent_base.py  chinese_translation_agent.py  transcript_generation_agent.py
aiagents/: AIAgentBase.py  ChineseTranslationAgent.py  TranscriptGenerationAgent.py
cmd/: root_cmd.py  rootcmd.py
messages/: analysis_data.py  queue_message.py  transcription_data.py
messagetypes/: messages.py
processors/: analysis_processor.py  processor_base.py  processorbase.py  processors.py  transcription_processor.py
services/: azure_openai_service.py  azureopenaiservice.py  file_service.py  fileservice.py  log_service.py  logservice.py  processor.py  queueservice.py  rabbitmq_queue_service.py  setting_service.py
