[project]
name = "sdips"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.23.0",
    "click>=8.2.1",
    "dataclasses-json>=0.6.7",
    "openai>=1.86.0",
    "pika>=1.3.2",
    "python-dotenv>=1.1.0",
]
